home page content and QA bugs

--- a/scss/layout/_build-team-hero-section.scss
+++ b/scss/layout/_build-team-hero-section.scss
@@ -20,7 +20,7 @@
             font-size: 42px;
             line-height: 55px;
             text-transform: capitalize;
-            color: #292930;
+            // color: #292930;
         }
     }
     p{
