--- a/scss/layout/_latest_case_study.scss
+++ b/scss/layout/_latest_case_study.scss
@@ -14,6 +14,7 @@
             color: #1B2B7C;
             margin-bottom: 15px;
             display: block;
+            text-transform: uppercase;
             &::before {
                 content: '';
                 width: 5%;
