--- a/scss/layout/_service_testimonial.scss
+++ b/scss/layout/_service_testimonial.scss
@@ -23,7 +23,7 @@
             font-style: normal;
             font-size: 24px;
             line-height: 36px;
-            color: #292930;
+            color: $theme-blue;
             font-family: "Poppins", sans-serif;
         }
         h4{
