--- a/scss/layout/_testimonial.scss
+++ b/scss/layout/_testimonial.scss
@@ -16,6 +16,7 @@
             color: #1B2B7C;
             margin-bottom: 15px;
             display: block;
+            text-transform: uppercase;
             &::before {
                 content: '';
                 width: 5%;
