--- a/scss/main.css
+++ b/scss/main.css
@@ -2903,6 +2903,7 @@ a.active {
   color: #1B2B7C;
   margin-bottom: 15px;
   display: block;
+  text-transform: uppercase;
 }
 .latest_case_study .custom-title span::before {
   content: "";
@@ -3132,6 +3133,7 @@ a.active {
   color: #1B2B7C;
   margin-bottom: 15px;
   display: block;
+  text-transform: uppercase;
 }
 .testimonial .custom-title span::before {
   content: "";
@@ -3572,7 +3574,7 @@ a.active {
   }
 }
 .development-services {
-  padding: 100px 0;
+  padding: 100px 0 20px;
   position: relative;
   background: #ffffff;
 }
@@ -3651,6 +3653,9 @@ a.active {
 .development-services ul li .service-card:hover a {
   color: #EE3F59;
 }
+.development-services ul li .service-card:hover h3 {
+  color: #EE3F59;
+}
 .development-services ul li:nth-child(2) {
   margin-top: 60px;
 }
@@ -3691,6 +3696,12 @@ a.active {
     padding-left: 0;
     border: none;
     max-width: 100%;
+  }
+  .development-services ul li .service-card {
+    margin: 30px 0 0 0;
+  }
+  .development-services ul li:nth-child(2), .development-services ul li:nth-child(3) {
+    margin-top: 0;
   }
 }
 .app-development {
@@ -3834,7 +3845,7 @@ a.active {
   font-style: normal;
   font-size: 24px;
   line-height: 36px;
-  color: #292930;
+  color: #1B2B7C;
   font-family: "Poppins", sans-serif;
 }
 .service-testimonial-section .testimonial-card h4 {
@@ -5111,7 +5122,6 @@ a.active {
   font-size: 42px;
   line-height: 55px;
   text-transform: capitalize;
-  color: #292930;
 }
 .hire-developer-section p {
   font-family: "Poppins", sans-serif;
