--- a/scss/main.css
+++ b/scss/main.css
@@ -1171,9 +1171,9 @@ a.active {
   font-weight: 500;
   line-height: 25px;
   color: #fff;
-  padding: 12px 10px 11px;
+  padding: 12px 40px 11px 30px;
   position: relative;
-  width: 170px;
+  width: auto;
   border-radius: 25px 0px 0px 25px;
   border: 2px solid #fff;
 }
@@ -1406,9 +1406,6 @@ a.active {
     max-width: 90%;
     margin-bottom: 20px;
   }
-  .custom-slider .carousel-inner .carousel-caption .btn-theme {
-    width: 150px;
-  }
   .custom-slider .carousel-inner .custom-slider-left {
     max-width: 12%;
   }
@@ -1623,6 +1620,7 @@ a.active {
   line-height: 25px;
   text-transform: lowercase;
   color: #2E2E2E;
+  min-height: 150px;
 }
 .service-section .card a {
   font-family: "Poppins";
@@ -1691,6 +1689,11 @@ a.active {
   color: #2E2E2E;
 }
 
+@media (max-width: 1680px) {
+  .service-section .card h5 {
+    min-height: 89px;
+  }
+}
 @media (max-width: 1440px) {
   .service-section {
     padding: 50px 0;
@@ -1703,6 +1706,7 @@ a.active {
   }
   .service-section .card p {
     font-size: 16px;
+    min-height: 175px;
   }
   .service-section .card a {
     padding: 0 0 0 50px;
@@ -1731,6 +1735,9 @@ a.active {
   .service-section .card a:after {
     width: 30px;
   }
+  .service-section .card p {
+    min-height: 275px;
+  }
 }
 @media (max-width: 1024px) {
   .service-section p {
@@ -1740,6 +1747,7 @@ a.active {
     letter-spacing: 0;
     font-size: 20px;
     line-height: 30px;
+    min-height: 71px;
   }
   .service-section .card a {
     font-size: 17px;
@@ -1768,9 +1776,20 @@ a.active {
   .service-section .card a:after {
     width: 40px;
   }
+  .service-section .card p {
+    min-height: 200px;
+  }
   .service-section p {
     font-size: 16px;
     line-height: normal;
+  }
+}
+@media (max-width: 767px) {
+  .service-section .card h5 {
+    min-height: auto;
+  }
+  .service-section .card p {
+    min-height: auto;
   }
 }
 @media (max-width: 576px) {
@@ -2536,6 +2555,7 @@ a.active {
   text-transform: lowercase;
   color: #2E2E2E;
   max-width: 95%;
+  min-height: 125px;
 }
 .technologies_work .custom-card .technologies-box-ul {
   margin: 40px 0px 0px 0px;
@@ -2593,6 +2613,9 @@ a.active {
     font-size: 40px;
     line-height: 50px;
   }
+  .technologies_work .custom-card .technologies-work-box p {
+    min-height: 155px;
+  }
 }
 @media (max-width: 1440px) {
   .technologies_work .custom-card {
@@ -2600,10 +2623,16 @@ a.active {
   }
   .technologies_work .custom-card .technologies-work-box p {
     font-size: 16px;
+    min-height: 125px;
   }
   .technologies_work .custom-card .technologies-box-ul li h5 {
     font-size: 14px;
     line-height: 25px;
+  }
+}
+@media (max-width: 1366px) {
+  .technologies_work .custom-card .technologies-work-box p {
+    min-height: 150px;
   }
 }
 @media (max-width: 1280px) {
@@ -2621,6 +2650,12 @@ a.active {
     text-align: center;
     display: inline-block;
     margin-bottom: 0px;
+  }
+  .technologies_work .custom-card .technologies-work-box h5 {
+    min-height: 69px;
+  }
+  .technologies_work .custom-card .technologies-work-box p {
+    min-height: 180px;
   }
 }
 @media (max-width: 1024px) {
@@ -2662,6 +2697,9 @@ a.active {
 }
 @media (max-width: 767px) {
   .technologies_work .custom-card {
+    min-height: auto;
+  }
+  .technologies_work .custom-card .technologies-work-box h5 {
     min-height: auto;
   }
 }
@@ -2880,9 +2918,6 @@ a.active {
   .industries_focus .industries-focus-ul li .industries-focus-box h5 {
     font-size: 16px;
     line-height: 25px;
-  }
-  .industries_focus .industries-focus-ul li .industries-focus-box h5 a {
-    margin: 20% 0px 20px 0px;
   }
 }
 .latest_case_study {
