--- a/scss/layout/_service.scss
+++ b/scss/layout/_service.scss
@@ -36,6 +36,7 @@
             line-height: 25px;
             text-transform: lowercase;
             color: #2E2E2E;
+            min-height: 150px;
         }
         a{
             font-family: 'Poppins';
@@ -114,6 +115,16 @@
     }
 }
 
+@media (max-width: $large-laptop) {
+    .service-section {
+        .card {
+            h5{
+                min-height: 89px;
+            }
+        }
+    }
+}
+
 
 @media (max-width: $laptop) {
     .service-section {
@@ -126,6 +137,7 @@
             }
             p {
                 font-size: 16px;
+                min-height: 175px;
             }
             a {
                 padding: 0 0 0 50px;
@@ -162,6 +174,9 @@
                     width: 30px;
                 }
             }
+            p{
+                min-height: 275px;
+            }
         }
     }
 }
@@ -176,6 +191,7 @@
                 letter-spacing: 0;
                 font-size: 20px;
                 line-height: 30px;
+                min-height: 71px;
             }
             a {
                 font-size: 17px;
@@ -207,10 +223,26 @@
                     width: 40px;
                 }
             }
+            p{
+                min-height: 200px;
+            }
         }
         p {
             font-size: 16px;
             line-height: normal;
+        }
+    }
+}
+
+@media (max-width: $large-mobile) {
+    .service-section {
+        .card {
+            h5{
+                min-height: auto;
+            }
+            p{
+                min-height: auto;
+            }
         }
     }
 }
