--- a/scss/layout/_technology_spectrum_section.scss
+++ b/scss/layout/_technology_spectrum_section.scss
@@ -31,6 +31,9 @@
                     margin-right: 20px;
                 }
             }
+            p{
+                min-height: auto;
+            }
             .more-btn{
                 font-family: 'Poppins';
                 font-weight: $font-bold;
@@ -65,6 +68,40 @@
             .card-body{
                 min-height: 370px;
             }
+            .technologies-work-box {
+                p{
+                    min-height: 100px;
+                }
+            }
+        }
+    }
+}
+
+
+@media (max-width: $laptop) {
+    .technology-spectrum-section {
+        .custom-card {
+            .technologies-work-box {
+                p{
+                    min-height: auto;
+                }
+            }
+        }
+    }
+}
+
+
+@media (max-width: $extra-small-laptop) {
+    .technology-spectrum-section {
+        .custom-card {
+            .technologies-work-box {
+                h5{
+                    min-height: auto;
+                }
+                p{
+                    min-height: 130px;
+                }
+            }
         }
     }
 }
@@ -78,6 +115,11 @@
             .technologies-box-ul {
                 li{
                     width: 50%;
+                }
+            }
+            .technologies-work-box {
+                h5{
+                    min-height: 70px;
                 }
             }
         }
@@ -94,6 +136,7 @@
                 h5{
                     font-size: 22px;
                     line-height: normal;
+                    min-height: auto;
                 }
             }
         }
