--- a/scss/layout/_blog_details.scss
+++ b/scss/layout/_blog_details.scss
@@ -1,3 +1,7 @@
+.details-left-side-section .blog-share-icon .a2a_dd addtoany_share_save addtoany_share {
+    display: none !important;
+}
+
 .blog-details-hero-section {
     padding: 50px 0;
     p{
@@ -19,6 +23,14 @@
        
         border-bottom: 1px solid rgba(27, 43, 124, 0.15);
         padding-bottom: 30px;
+
+        .blog-details-img {
+            img {
+                width: 100%;
+                height: 500px;
+                object-fit: cover;
+            }
+        }
 
         .blog-details-img-icon {
             display: flex;
@@ -82,6 +94,34 @@
             line-height: 27px;
             color: $text-color;
             margin: 0px 0px 15px 0px;
+        }
+
+        a {
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 27px;
+            color: #EE3F59;
+            margin: 0px 0px 15px 0px;
+
+            span {
+                color: #EE3F59 !important;
+
+                &:hover {
+                    color: #1B2B7C !important;
+                }
+
+                &:focus {
+                    color: #1B2B7C !important;
+                }
+            }
+            
+            &:hover {
+                color: #1B2B7C;
+            }
+
+            &:focus {
+                color: #1B2B7C;
+            }
         }
 
         .blog-details-list {
@@ -212,11 +252,33 @@
     }
 }
 
+@media (max-width: $laptop)  {
+    .blog-details-section {
+        .details-left-side-section {
+            .blog-details-img {
+                img {
+                    width: 100%;
+                    height: 400px;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: $ipad-pro) {
     .blog-details-section {
         padding: 50px 0px 20px;
 
         .details-left-side-section {
+
+            .blog-details-img {
+                img {
+                    width: 100%;
+                    height: auto;
+                    object-fit: cover;
+                }
+            }
 
             .blog-details-img-icon {
                 .date-section {
@@ -309,6 +371,14 @@
 
         .details-left-side-section {
 
+            .blog-details-img {
+                img {
+                    width: 100%;
+                    height: auto;
+                    object-fit: cover;
+                }
+            }
+
             .blog-details-img-icon {
                 .date-section {
                     span {
@@ -399,6 +469,14 @@
         padding: 50px 0px 20px;
 
         .details-left-side-section {
+
+            .blog-details-img {
+                img {
+                    width: 100%;
+                    height: auto;
+                    object-fit: cover;
+                }
+            }
 
             .blog-details-img-icon {
                 .date-section {
@@ -495,6 +573,14 @@
             .blog-details-top {
                 .text-end {
                     text-align: left !important;
+                }
+            }
+
+            .blog-details-img {
+                img {
+                    width: 100%;
+                    height: auto;
+                    object-fit: cover;
                 }
             }
         }
