--- a/scss/layout/_blog_section.scss
+++ b/scss/layout/_blog_section.scss
@@ -1,3 +1,19 @@
+.left-side-section .blog-description .a2a_button_facebook {
+    display: none !important;
+}
+
+.left-side-section .blog-description .a2a_button_twitter {
+    display: none !important;
+}
+
+.left-side-section .blog-description .a2a_button_email {
+    display: none !important;
+}
+
+.left-side-section .blog-description .a2a_button_linkedin {
+    display: none !important;
+}
+
 .blog-hero-section {
     padding: 50px 0;
     p{
@@ -31,7 +47,11 @@
                 border-radius: 0;
                 
                 img {
-                    border-radius: 16px;
+                    border-radius: 16px 16px 0px 0px;
+                    max-height: 250px;
+                    min-height: 250px;
+                    width: 100%;
+                    object-fit: cover;
                 }
             }
             .blog-description {
@@ -44,6 +64,12 @@
                     color: #1B2B7C;
                     margin: 0px 0px 20px 0px;
                     min-height: 70px;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2; /* number of lines to show */
+                    line-clamp: 2; 
+                    -webkit-box-orient: vertical;
                 }
                 p {
                     font-family: 'Poppins';
@@ -52,6 +78,12 @@
                     font-size: 20px;
                     line-height: 30px;
                     color: #2E2E2E;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2; /* number of lines to show */
+                    line-clamp: 2; 
+                    -webkit-box-orient: vertical;
                 }
                 hr {
                     margin: 20px 0px;
@@ -251,3 +283,4 @@
         padding: 50px 0px;
     }
 }
+
