--- a/scss/layout/_blog_right_section.scss
+++ b/scss/layout/_blog_right_section.scss
@@ -77,7 +77,7 @@
                 outline: none;
 
                 &.active {
-                    box-shadow: 0px 8px 16px rgb(27 43 124 / 15%);
+                    box-shadow: 0px 8px 16px rgba(27, 43, 124, 0.15);
                     border: 1px solid transparent;
                     outline: none;
 
@@ -95,7 +95,7 @@
                 }
 
                 &:hover {
-                    box-shadow: 0px 8px 16px rgb(27 43 124 / 15%);
+                    box-shadow: 0px 8px 16px rgba(27, 43, 124, 0.15);
                     border: 1px solid transparent;
                     outline: none;
 
@@ -105,7 +105,7 @@
                 }
 
                 &:focus {
-                    box-shadow: 0px 8px 16px rgb(27 43 124 / 15%);
+                    box-shadow: 0px 8px 16px rgba(27, 43, 124, 0.15);
                     border: 1px solid transparent;
                     outline: none;
 
