--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,5 +101,7 @@
 @import 'layout/_development_services_hero_section';
 @import 'layout/_platforms_develoment_services';
 
+@import 'layout/_our_team_section';
+@import 'layout/_team_img_section';
 
 @import 'layout/_responsive';
