--- a/scss/main.css
+++ b/scss/main.css
@@ -1113,7 +1113,7 @@ a.active {
     padding: 0px 10px 20px;
   }
   .hero-section .custom-navbar.fixed-navbar {
-    padding: 0px 10px 20px;
+    padding: 10px 10px 15px;
   }
   .hero-section .custom-navbar .desktop-logo {
     max-width: 150px;
@@ -1202,12 +1202,23 @@ a.active {
   .hero-section .custom-navbar {
     padding: 10px 0px 10px 20px;
   }
+  .hero-section .custom-navbar .custom-toggler-icon {
+    background: none;
+    width: auto;
+    height: auto;
+    font-size: 30px;
+    color: #1B2B7C;
+    vertical-align: middle;
+  }
   .hero-section .custom-navbar.fixed-navbar {
     padding: 5px 0px 5px 20px;
   }
   .hero-section .custom-navbar.fixed-navbar .mobile-logo img {
     -webkit-filter: brightness(0) invert(1);
             filter: brightness(0) invert(1);
+  }
+  .hero-section .custom-navbar.fixed-navbar .custom-toggler-icon {
+    color: #fff;
   }
   .hero-section .topbar .topbar-text {
     display: -webkit-box;
@@ -1273,12 +1284,23 @@ a.active {
   .hero-section .custom-navbar {
     padding: 10px 0px;
   }
+  .hero-section .custom-navbar .custom-toggler-icon {
+    background: none;
+    width: auto;
+    height: auto;
+    font-size: 30px;
+    color: #1B2B7C;
+    vertical-align: middle;
+  }
   .hero-section .custom-navbar.fixed-navbar {
-    padding: 0px 0px 5px;
+    padding: 5px 0px 5px;
   }
   .hero-section .custom-navbar.fixed-navbar .mobile-logo img {
     -webkit-filter: brightness(0) invert(1);
             filter: brightness(0) invert(1);
+  }
+  .hero-section .custom-navbar.fixed-navbar .custom-toggler-icon {
+    color: #fff;
   }
   .mobile-logo {
     display: block;
@@ -13234,6 +13256,210 @@ a.active {
   background: url(../img/development-services-page/platforms-left-bg.svg) left center, url(../img/development-services-page/platforms-right-bg.svg) right center, rgba(251, 84, 114, 0.05);
   background-repeat: no-repeat;
   margin-bottom: 40px;
+}
+
+.our-team-section {
+  padding: 150px 0 50px;
+  background: #FDECEE;
+  margin-top: -120px;
+}
+
+.team-text-section {
+  padding: 80px 0px;
+}
+
+.team-text-section .content-blk .common-title h2 {
+  max-width: 90%;
+}
+
+.team-text-section .content-blk p {
+  max-width: 90%;
+  margin: 0px 0px;
+}
+
+.team-text-section .team-list-section {
+  padding: 0px 0px;
+  margin: 50px 0px 0px 0px;
+  list-style: none;
+}
+
+.team-text-section .team-list-section li {
+  position: relative;
+  padding: 0 0 15px 30px;
+  font-size: 18px;
+  color: #2E2E2E;
+  width: 100%;
+  display: block;
+}
+
+.team-text-section .team-list-section li:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 5px;
+  width: 19px;
+  height: 19px;
+  background: url(../img/about-us-page/helping-hand-list-bg.svg) no-repeat;
+}
+
+.team-img-section {
+  padding: 100px 0px;
+}
+
+.team-img-section .common-title-two h5:after {
+  background-color: #EE3F59;
+}
+
+.team-img-section .common-title h2 {
+  max-width: 40%;
+  margin: 0 auto;
+}
+
+.team-img-section .common-title p {
+  max-width: 70%;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.team-img-section .team-img-list {
+  margin: 60px 0px 0px 0px;
+  padding: 0px 0px;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-flow: wrap;
+      flex-flow: wrap;
+}
+
+.team-img-section .team-img-list li {
+  width: 8%;
+  margin: 0px 0px 10px;
+  padding: 0px 0px;
+  display: inline-block;
+  border-radius: 8px 8px 0px 0px;
+  position: relative;
+  overflow: hidden;
+}
+
+.team-img-section .team-img-list li img {
+  width: 100%;
+  max-height: 150px;
+  border-radius: 8px 8px 0px 0px;
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
+}
+
+.team-img-section .team-img-list li .hover-text {
+  background: linear-gradient(185.63deg, #F0562D 24.8%, #EE3F59 95.48%);
+  opacity: 0.75;
+  padding: 5px 0px;
+  text-align: center;
+  border-radius: 0px 0px 8px 8px;
+  opacity: 0;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.team-img-section .team-img-list li .hover-text span {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #ffffff;
+}
+
+.team-img-section .team-img-list li:hover img {
+  -webkit-filter: unset;
+          filter: unset;
+}
+
+.team-img-section .team-img-list li:hover .hover-text {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+@media (max-width: 1366px) {
+  .team-img-section .common-title p {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 1280px) {
+  .team-img-section .common-title h2 {
+    max-width: 35%;
+    margin: 0 auto;
+  }
+  .team-img-section .common-title p {
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 25px;
+  }
+  .team-img-section .team-img-list li {
+    width: 12%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .team-img-section .common-title h2 {
+    max-width: 40%;
+    margin: 0 auto;
+  }
+  .team-img-section .common-title p {
+    max-width: 100%;
+    margin: 0 auto;
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 25px;
+  }
+  .team-img-section .team-img-list {
+    margin: 30px 0px 0px 0px;
+  }
+  .team-img-section .team-img-list li {
+    width: 12%;
+  }
+}
+
+@media (max-width: 991px) {
+  .team-img-section .common-title h2 {
+    max-width: 50%;
+    margin: 0 auto;
+  }
+  .team-img-section .team-img-list li {
+    width: 15%;
+  }
+}
+
+@media (max-width: 576px) {
+  .team-img-section .common-title h2 {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  .team-img-section .common-title p {
+    max-width: 100%;
+    margin: 0 auto;
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 25px;
+  }
+  .team-img-section .team-img-list li {
+    width: 30%;
+  }
 }
 
 @media (max-width: 1024px) {
