FAQ page & Life at briskstar page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,5 +101,12 @@
 @import 'layout/_development_services_hero_section';
 @import 'layout/_platforms_develoment_services';
 
+@import 'layout/_faq_tab_section';
+@import 'layout/_faq_hero_section';
+
+@import 'layout/_life_at_briskstar_hero_section';
+@import 'layout/_life_at_briskstar_section';
+@import 'layout/_events_life_at_briskstar_section';
+
 
 @import 'layout/_responsive';
