--- a/scss/main.scss
+++ b/scss/main.scss
@@ -110,5 +110,10 @@
 @import 'layout/_life_at_briskstar_section';
 @import 'layout/_events_life_at_briskstar_section';
 
+@import 'layout/_transparent-workflow';
+@import 'layout/_methodologies_section';
+@import 'layout/_scrum_methodology_section';
+@import 'layout/_development_methodology_section';
+
 
 @import 'layout/_responsive';
