--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,5 +115,8 @@
 @import 'layout/_scrum_methodology_section';
 @import 'layout/_development_methodology_section';
 
+@import 'layout/_technology_detail_hero_section';
+@import 'layout/_cms_development_section';
+
 
 @import 'layout/_responsive';
